--- a/index.html
+++ b/index.html
@@ -1,80 +1,87 @@
 <!DOCTYPE HTML>
 <html>
-	<head>
-		<title>Women in Tech Project</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
-	</head>
-	<body class="is-preload">
 
-		<!-- Header -->
-			<header id="header">
-				<div class="inner">
-					<a href="#" class="image avatar"><img src="images/khinezar.jpg" alt="" /></a>
-					<h1><strong>Women in Tech Project</strong>,week-9 session<br />
-					for Data Analysis Career Track<br />
-					by <a href="https://khinezarthwe.github.io/">Khine Zar Thwe</a>.</h1>
-				</div>
+<head>
+	<title>Women in Tech Project</title>
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+	<link rel="stylesheet" href="assets/css/main.css" />
+</head>
+
+<body class="is-preload">
+
+	<!-- Header -->
+	<header id="header">
+		<div class="inner">
+			<a href="#" class="image avatar"><img src="images/khinezar.jpg" alt="" /></a>
+			<h1><strong>Women in Tech Project</strong>,week-9 session<br />
+				for Data Analysis Career Track<br />
+				by <a href="https://khinezarthwe.github.io/">Khine Zar Thwe</a>.</h1>
+		</div>
+	</header>
+
+	<!-- Main -->
+	<div id="main">
+
+		<!-- One -->
+		<section id="one">
+			<header class="major">
+				<h2>Understanding Version Control</h2>
 			</header>
-
-		<!-- Main -->
-			<div id="main">
-
-				<!-- One -->
-					<section id="one">
-						<header class="major">
-							<h2>Understanding Version Control</h2>
-						</header>
-						<p>A version control system (VCS) is a software tool that helps manage changes to source code and other files in a software development project. It provides a way to track and coordinate the changes made by multiple developers working on the same project, enabling them to collaborate effectively.
-							The primary purpose of a version control system is to maintain a history of changes to files over time and provide mechanisms for branching, merging, and comparing different versions of the codebase. It allows developers to work on separate branches, make changes to files, and merge those changes back into a main codebase.</p>
-						<!-- <ul class="actions">
+			<p>A version control system (VCS) is a software tool that helps manage changes to source code and other
+				files in a software development project. It provides a way to track and coordinate the changes made by
+				multiple developers working on the same project, enabling them to collaborate effectively.
+				The primary purpose of a version control system is to maintain a history of changes to files over time
+				and provide mechanisms for branching, merging, and comparing different versions of the codebase. It
+				allows developers to work on separate branches, make changes to files, and merge those changes back into
+				a main codebase.</p>
+			<!-- <ul class="actions">
 							<li><a href="#" class="button">Learn More</a></li>
 						</ul> -->
-					</section>
+		</section>
 
-				<!-- Two -->
-					<section id="two">
-						<h2>Student Profile</h2>
-						<div class="row">
-							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/01.jpg" class="image fit thumb"><img src="images/thumbs/01.jpg" alt="" /></a>
-								<h3>Student ID</h3>
-								<p>comment</p>
-							</article>
-							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/02.jpg" class="image fit thumb"><img src="images/thumbs/02.jpg" alt="" /></a>
-								<h3>Student ID</h3>
-								<p>comment</p>
-							</article>
-							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/03.jpg" class="image fit thumb"><img src="images/thumbs/03.jpg" alt="" /></a>
-								<h3>Student ID</h3>
-								<p>comment</p>
-							</article>
-							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/04.jpg" class="image fit thumb"><img src="images/thumbs/04.jpg" alt="" /></a>
-								<h3>Student ID</h3>
-								<p>comment</p>
-							</article>
-							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/05.jpg" class="image fit thumb"><img src="images/thumbs/05.jpg" alt="" /></a>
-								<h3>Student ID</h3>
-								<p>comment</p>
-							</article>
-							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/06.jpg" class="image fit thumb"><img src="images/thumbs/06.jpg" alt="" /></a>
-								<h3>Student ID</h3>
-								<p>comment</p>
-							</article>
-						</div>
-						<!-- <ul class="actions">
+		<!-- Two -->
+		<section id="two">
+			<h2>Student Profile</h2>
+			<div class="row">
+				<article class="col-6 col-12-xsmall work-item">
+					<a href="images/fulls/01.jpg" class="image fit thumb"><img src="images/thumbs/01.jpg" alt="" /></a>
+					<h3>Student ID</h3>
+					<p>comment</p>
+				</article>
+				<article class="col-6 col-12-xsmall work-item">
+					<a href="images/fulls/02.jpg" class="image fit thumb"><img src="images/thumbs/02.jpg" alt="" /></a>
+					<h3>Su Su</h3>
+					<p>comment</p>
+				</article>
+				<article class="col-6 col-12-xsmall work-item">
+					<a href="images/fulls/03.jpg" class="image fit thumb"><img src="images/thumbs/03.jpg" alt="" /></a>
+					<h3>Student ID</h3>
+					<p>comment</p>
+				</article>
+				<article class="col-6 col-12-xsmall work-item">
+					<a href="images/fulls/04.jpg" class="image fit thumb"><img src="images/thumbs/04.jpg" alt="" /></a>
+					<h3>Student ID</h3>
+					<p>comment</p>
+				</article>
+				<article class="col-6 col-12-xsmall work-item">
+					<a href="images/fulls/05.jpg" class="image fit thumb"><img src="images/thumbs/05.jpg" alt="" /></a>
+					<h3>Student ID</h3>
+					<p>comment</p>
+				</article>
+				<article class="col-6 col-12-xsmall work-item">
+					<a href="images/fulls/06.jpg" class="image fit thumb"><img src="images/thumbs/06.jpg" alt="" /></a>
+					<h3>Student ID</h3>
+					<p>comment</p>
+				</article>
+			</div>
+			<!-- <ul class="actions">
 							<li><a href="#" class="button">Full Portfolio</a></li>
 						</ul> -->
-					</section>
+		</section>
 
-				<!-- Three -->
-					<!-- <section id="three">
+		<!-- Three -->
+		<!-- <section id="three">
 						<h2>Get In Touch</h2>
 						<p>Accumsan pellentesque commodo blandit enim arcu non at amet id arcu magna. Accumsan orci faucibus id eu lorem semper nunc nisi lorem vulputate lorem neque lorem ipsum dolor.</p>
 						<div class="row">
@@ -110,8 +117,8 @@
 						</div>
 					</section> -->
 
-				<!-- Four -->
-				<!--
+		<!-- Four -->
+		<!--
 					<section id="four">
 						<h2>Elements</h2>
 
@@ -428,30 +435,32 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 					</section>
 				-->
 
-			</div>
+	</div>
 
-		<!-- Footer -->
-			<footer id="footer">
-				<div class="inner">
-					<ul class="icons">
-						<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
-						<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
-						<li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
-					</ul>
-					<ul class="copyright">
-						<li>&copy; KZT</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-					</ul>
-				</div>
-			</footer>
+	<!-- Footer -->
+	<footer id="footer">
+		<div class="inner">
+			<ul class="icons">
+				<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+				<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
+				<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
+				<li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+			</ul>
+			<ul class="copyright">
+				<li>&copy; KZT</li>
+				<li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+			</ul>
+		</div>
+	</footer>
 
-		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.poptrox.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
+	<!-- Scripts -->
+	<script src="assets/js/jquery.min.js"></script>
+	<script src="assets/js/jquery.poptrox.min.js"></script>
+	<script src="assets/js/browser.min.js"></script>
+	<script src="assets/js/breakpoints.min.js"></script>
+	<script src="assets/js/util.js"></script>
+	<script src="assets/js/main.js"></script>
 
-	</body>
+</body>
+
 </html>
