--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
 				<!-- Two -->
 					<section id="two">
-						<h2>Student Profile</h2>
+						<h2>2023010157 Profile</h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/01.jpg" class="image fit thumb"><img src="images/thumbs/01.jpg" alt="" /></a>
