--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/01.jpg" class="image fit thumb"><img src="images/thumbs/01.jpg" alt="" /></a>
-								<h3>Student ID</h3>
+								<h3>MaiCherryChitKune</h3>
 								<p>comment</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
