--- a/index.html
+++ b/index.html
@@ -35,12 +35,12 @@
 
 				<!-- Two -->
 					<section id="two">
-						<h2>Student Profile</h2>
+						<h2>Student Profile : Hazel </h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/01.jpg" class="image fit thumb"><img src="images/thumbs/01.jpg" alt="" /></a>
-								<h3>Student ID</h3>
-								<p>comment</p>
+								<h3>WiT2023010180</h3>
+								<p>Hello, Everyone!</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/02.jpg" class="image fit thumb"><img src="images/thumbs/02.jpg" alt="" /></a>
