--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/03.jpg" class="image fit thumb"><img src="images/thumbs/03.jpg" alt="" /></a>
-								<h3>Eaint Khaing Su </h3>
+								<h3>WiT2023010018</h3>
 								<p>comment</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
